<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnss_imu_esekf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ramchanderbhaskara@gmail.com">ram</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  
  <!-- <build_depend>GeographicLib</build_depend>
  <exec_depend>GeographicLib</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
